2025-05-03
version: 1.0.21
+ support inject request parameters into data set as parameter mapper setting
+ support parse more default value from submit parameters by setting defaultValue with #params.xxx where xxx come from request parameter

2025-05-01
version: 1.0.20
+ plugin support dynamic parameter with place holder ${variable-name} in source setting

2025-04-30
version: 1.0.19
+ update library will-core & will-serv
+ dynamic version depending on package.json

2025-04-23
version: 1.0.18
+ fix bug emte001: cannot delete model when retrieve 
+ emte001: support share flag

2025-04-22
+ support prehandler dynamic function to prevent execute prestatement if return false
+ support posthandler dynamic function to prevent execute poststatement if return false
+ support moleculer transporter libraries (amqp,redis,kafka,nats)

2025-04-04
+ can assign request headers like body by customize parse default values and parameters
+ can define parameter with place holder ? sign from environment variables setting
+ can defined api connection setting with connect id via table tmigrateconnect like (connection.type=DB)
+ emte001: can custom define api connection
+ emtq001: migrate tracking screen

2025-04-02
+ fixed bug api/extractfile note name
+ change default async export save stream with parameter async(true/false)
+ fix bug api/extract/data export with procoss status = ERROR

2025-04-01
+ fixed display time by format function instead of default to string
+ alter table tmigratefile (createdate,createtime,createmillis,createuser)

2025-03-30
+ support migrate plugin database query dataset (import data from query table)
(see ex. config/model.json: test_simple_text_plugin_database)
+ support connection setting with connectid defined in table tmigrateconnect
(see ex. config/model.json: test_simple_call_db_connection)

2025-03-27
+ update will-run to support payload limit setting

2025-03-25
+ fixed verify export with header setting false