@@ -27,8 +27,8 @@ export class MigrateXlsxUploader extends TknUploadRouter {
 		if(req.file) {
 			req.file.originalname = Buffer.from(req.file.originalname, 'latin1').toString('utf8');
 		}
-		console.log(this.constructor.name+".doUploadFile: body",JSON.stringify(req.body));
-		console.log(this.constructor.name+".doUploadFile: file",req.file);
+		this.logger.debug(this.constructor.name+".doUploadFile: body",JSON.stringify(req.body));
+		this.logger.debug(this.constructor.name+".doUploadFile: file",req.file);
 		let response: JSONReply = new JSONReply();
 		response.head.modeling("migrate","upload");
 		response.head.composeNoError();
