@@ -2,6 +2,7 @@
 version: 1.0.21
 + support inject request parameters into data set as parameter mapper setting
 + support parse more default value from submit parameters by setting defaultValue with #params.xxx where xxx come from request parameter
++ support initialize and finalize task configuration setting
 
 2025-05-01
 version: 1.0.20
